# agensus

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: api.md  index.md  strategies.md
examples/: judge_longest.py  llm_agents.py  quickstart.py
src/agensus/: __init__.py  __main__.py  core.py  strategies.py
src/agent_consensus/: __init__.py  __main__.py  strategies.py
tests/: test_llm_judge.py  test_overlap.py  test_rrf.py
