[project]
name = "agent-consensus"
version = "0.1.0"
description = "Consensus algorithms for multi-agent LLM systems - overlap, RRF, and LLM judge."
readme = "README.md"
requires-python = ">=3.9"
authors = [{name="You", email="you@example.com"}]
dependencies = []

[project.scripts]
agent-consensus = "agent_consensus.__main__:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["agent_consensus*"]
