[project]
name = "agensus"
version = "0.1.0"
description = "AI Agent Consensus framework - lightweight consensus library for multi-agent LLM systems with overlap, RRF, and LLM judge strategies."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
agensus = "agensus.__main__:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["agensus*"]
